# spark

./: vite.config.ts
.github/workflows/: build-dist.yml
docs/docs/: spark-renderer.md
examples/editor/: index.html
examples/splat-painter/: index.html
rust/: Cargo.toml
rust/spark-lib/: Cargo.toml
rust/spark-lib/js/: decode_image.js
rust/spark-lib/src/: antisplat.rs  csplat.rs  decoder.rs  gsplat.rs  ksplat.rs  ply.rs  rad.rs  sogs.rs  spz.rs
rust/spark-rs/: Cargo.toml
rust/spark-rs/src/: lib.rs  transform.rs
rust/spark-worker-rs/: Cargo.toml
rust/spark-worker-rs/src/: decoder.rs  ext_splats.rs  lib.rs  packed_splats.rs
src/: ExtSplats.ts  PackedSplats.ts  Readback.ts  SparkRenderer.ts  SparkViewpoint.ts  SplatAccumulator.ts  SplatLoader.ts  SplatPager.ts  SplatWorker.ts  index.ts  spz.ts  utils.ts  worker.ts
src/shaders/: computeUint.glsl
