[package]
name = "spark-lib"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
web_decode_image = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:serde-wasm-bindgen"]

[dependencies]
ahash.workspace = true
anyhow.workspace = true
async-trait.workspace = true
glam.workspace = true
half.workspace = true
ordered-float.workspace = true
miniz_oxide.workspace = true
serde.workspace = true
smallvec.workspace = true
itertools.workspace = true
serde_json.workspace = true
zip.workspace = true
image.workspace = true
hnsw.workspace = true
rand_pcg.workspace = true
space.workspace = true
futures.workspace = true
serde-wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
